# Point-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/models/primitives/: cube.glb
assets/shaders/frag/: hello_shader.frag
assets/shaders/vert/: hello_shader.vert
code/: main.cpp
code/engine/: engine.cpp
code/engine/APIs/: materials_api.cpp  resources_api.cpp  world_api.cpp
code/engine/core/: core.cpp  renderer.cpp  scripting_engine.cpp
code/engine/core/entities/: entities_manager.cpp
code/engine/core/managers/: memory_manager.cpp  resource_manager.cpp  window_manager.cpp
code/engine/core/systems/: camera_system.cpp  input_system.cpp  materials_system.cpp  movement_system.cpp
code/engine/interface/: interface.cpp
code/engine/tools/: editor.cpp
include/headers/: camera_system.hpp  components.hpp  configs.hpp  core.hpp  defs.hpp  editor.hpp  engine_state.hpp  entities_manager.hpp  input_system.hpp  interface.hpp  materials_api.hpp  materials_system.hpp  memory_manager.hpp  movement_system.hpp  point.hpp  renderer.hpp  resource_manager.hpp  resources_api.hpp  scripting_engine.hpp  state.hpp  stl_headers.hpp  third_party.hpp  window_manager.hpp  world_api.hpp
include/utils/: u_components.hpp  u_initialization.hpp  u_materials.hpp  u_models.hpp  u_random.hpp  u_serialization.hpp  u_shaders.hpp  u_tags.hpp  u_textures.hpp  u_windows.hpp
scripts/: generation_scripts.hpp  movement_scripts.hpp
